[tool.poetry]
name = "pubsub"
version = "0.1.0"
description = ""
authors = ["Vladyslav Movchan <vladyslav.movchan@nixsolutions.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
environs = "^9.5.0"
uvicorn = "^0.20.0"
redis = {extras = ["hiredis"], version = "^4.3.4"}
orjson = "^3.8.2"
pytest-cov = "^4.0.0"
httpx = "^0.23.1"
trio = "^0.22.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"
fakeredis = "^2.2.0"
flake8-import-order = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
